# switchy

./: Cargo.toml  README.md  rust-toolchain
.cargo/: config.toml
commander/: Cargo.toml
shift_register_hal/: Cargo.toml
shift_register_hal/src/: lib.rs  mock.rs
src/: app.rs  configure.rs  debounced.rs  key_mapping.rs  lib.rs  main.rs
src/usb/: command.rs  descriptor.rs  interface.rs  mod.rs
testsuite/: Cargo.toml
testsuite/src/: lib.rs
testsuite/tests/: test.rs
