[package]
authors = ["William Hart <hart.wl@gmail.com>"]
name = "switchy-rtic"
edition = "2018"
version = "0.1.0"

[workspace]
members = ["testsuite"]

[features]
default = ["dev_board"]
dev_board = []
board_rev_1_or_2 = []
board_rev_3 = []

[dependencies]
defmt = "0.3.0"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
cortex-m-rtic = "1.1"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
stm32f4xx-hal = { version = "0.14.0", features = ["stm32f401", "defmt", "rtic", "usb_fs" ] }
systick-monotonic = "1.0.1"

switch-hal = "0.4.0"
usb-device = "0.2.9"
usbd-hid = "0.6.1"

[dependencies.serde]
version="1"
default-features=false

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
