[package]
authors = ["William Hart <hart.wl@gmail.com>"]
name = "switchy"
edition = "2018"
version = "0.1.0"

[workspace]
members = ["testsuite", "shift_register_hal"]

[features]
default = ["board_rev_1_or_2"]

# joysticks are off because they currently spam and aren't used in keyboard mode
dev_board = ["blink", "buttons", "encoders", "logging"]
board_rev_1_or_2 =  ["logging", "buttons", "encoders"] # "joysticks" 
board_rev_3 =  ["blink", "buttons", "encoders", "logging"] # "joysticks"

blink = []
buttons = []
encoders = []
joysticks = []
logging = ["shift_register_hal/logging"]

[dependencies]
defmt = "0.3.2"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
cortex-m-rtic = "1.1.4"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
stm32f4xx-hal = { version = "0.14.0", features = ["stm32f401", "defmt", "rtic", "usb_fs" ] }

heapless = "0.7.16"
rotary-encoder-hal = { version = "0.5.0" }
switch-hal = "0.4.0"
usb-device = { version = "0.2.9", features = ["defmt"] }
usbd-hid = "0.6.1"

shift_register_hal = { path = "./shift_register_hal", default-features = false }

[dependencies.serde]
version="1.0.154"
default-features=false

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-
