[package]
name = "shift_register_hal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "0.2.7", features = ["unproven"] }
num-traits = { version = "0.2.15", default-features = false }
defmt = { version = "0.3.2", optional = true }

[features]
default = []
logging = ["defmt"]
